--- a/Clutch/Info.plist
+++ b/Clutch/Info.plist
@@ -18,15 +18,30 @@
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.2</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>clutch-transmission</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>1.2</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>$(MACOSX_DEPLOYMENT_TARGET)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 Harrison White. All rights reserved.</string>
+	<string>Copyright © 2019 Harrison White. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>SUEnableAutomaticChecks</key>
+	<true/>
+	<key>SUFeedURL</key>
+	<string>https://hbwhite.github.io/releases/clutch/appcast.xml</string>
+	<key>SUPublicEDKey</key>
+	<string>i3Zw9Ys1vd3Wz2xeSDLxxB1qk3sxo1I/OblRIm0q9s4=</string>
 </dict>
 </plist>
